[package]
name = "p2pthing"
version = "0.1.0"
authors = ["KillSwitch"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]

default = ["server", "client"]

server = []
client = ["crossterm", "tui"]
win = ["dxgcap"]

[dependencies]
rgb2yuv420 = "0.2.3"
stopwatch = "0.0.7"
spin_sleep = "1.0.0"
scrap = "0.5"
serde = {version = "1.0.123", features = ["derive"]}
bincode = "1.3.1"
mio = {version = "0.7.7", features = ["tcp", "udp", "os-poll"]}
num = "0.3"
num-derive = "0.3"
num-traits = "0.2"
ctrlc = { version = "3.1.7", features = ["termination"] }
rsa = "0.3.0"
rand_core = { version = "0.5.0", features = ["getrandom"] }

dxgcap = { version = "0.2.4", optional = true }
crossterm = { version = "0.18", optional = true }
tui = { version = "0.14.0", default-features = false, features = ['crossterm'], optional = true }
