[package]
name = "p2pthing"
version = "0.6.0"
authors = ["KillSwitch"]
edition = "2018"
readme = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
# TODO: Organize dependencies better

[features]

default = ["server"]

server = []
client = ["crossterm", "tui", "textwrap", "ringbuf"]
audio = ["cpal", "magnum-opus", "rubato", "nnnoiseless"]
#win = ["dxgcap"]

[dependencies]
rgb2yuv420 = "0.2.3"
stopwatch = "0.0.7"
spin_sleep = "1.0.0"
scrap = "0.5"
serde = {version = "1.0.123", features = ["derive"]}
bincode = "1.3.1"
mio = {version = "0.7.7", features = ["tcp", "udp", "os-poll"]}
num = "0.3"
num-derive = "0.3"
num-traits = "0.2"
ctrlc = { version = "3.1.7", features = ["termination"] }
rsa = "0.3.0"
sha2 = "0.9.3"
aes-gcm-siv = "0.9.0"
rand_core = { version = "0.5.0", features = ["getrandom"] }
rand = "0.8.3"
chrono = "0.4.19"
crossbeam = "0.8.0"
mio-misc = "1.0.0"
itertools = "0.10.0"

### TUI
#dxgcap = { version = "0.2.4", optional = true }
crossterm = { version = "0.19", optional = true }
tui = { version = "0.14.0", default-features = false, features = ['crossterm'], optional = true }
textwrap = { version = "0.13", optional = true }

### AUDIO

cpal = { version =  "0.13.1", optional = true }
magnum-opus  = { version = "0.3.2", optional = true }
rubato = { version = "0.7.0", optional = true}
ringbuf = {version = "0.2.3", optional = true }
nnnoiseless = {version = "0.3.2", optional = true}