[package]
name = "p2pthing"
version = "0.7.0"
authors = ["KillSwitch"]
edition = "2018"
readme = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
# TODO: Organize dependencies better

[features]

default = ["server"]

server = []
client-tui = ["p2pthing_tui"]
client-gui = ["p2pthing_gui"]
audio = ["cpal", "magnum-opus", "rubato", "ringbuf"]
#win = ["dxgcap"]

[dependencies]
rgb2yuv420 = "0.2.3"
stopwatch = "0.0.7"
spin_sleep = "1.0.0"
#scrap = "0.5"
serde = {version = "1.0.123", features = ["derive"]}
bincode = "1.3.1"
mio = {version = "0.7.7", features = ["tcp", "udp", "os-poll"]}
mio-misc = "1.0.0"
num = "0.4.0"
num-derive = "0.3"
num-traits = "0.2"
rsa = "0.5.0"
sha2 = "0.9.3"
aes-gcm-siv = "0.10.2"
rand_core = { version = "0.6.3", features = ["getrandom"] }
rand = "0.8.3"
chrono = "0.4.19"
crossbeam = "0.8.0"
itertools = "0.10.0"

### COMMON
p2pthing_common = { path = "../common" }

### TUI
p2pthing_tui = { path = "../tui", optional = true }

### GUI
p2pthing_gui = { path = "../gui/src-tauri", optional = true }

### AUDIO

cpal = { version =  "0.13.1", optional = true }
magnum-opus  = { version = "0.3.2", optional = true }
rubato = { version = "0.8.1", optional = true}
ringbuf = {version = "0.2.3", optional = true }
#nnnoiseless = {version = "0.3.2", optional = true}

[dev-dependencies]
tauri-cli = "1.0.0-beta.5"