[package]
name = "p2pthing"
version = "0.7.0"
authors = ["KillSwitch"]
edition = "2018"
readme = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
# TODO: Organize dependencies better

[features]

default = ["server"]

server = []
tui = ["p2pthing_tui"]
gui = ["p2pthing_gui"]
#audio = ["cpal", "magnum-opus", "rubato", "ringbuf"]
tracing = ["p2pthing_common/tracing"]
#win = ["dxgcap"]

gui-build = [ "p2pthing_gui/custom-protocol" ]

[dependencies]
rgb2yuv420 = "0.2.3"
stopwatch = "0.0.7"
spin_sleep = "1.0.0"
#scrap = "0.5"
bincode = "1.3.1"
mio = {version = "0.8.8"}
base64 = "0.21.3"
chrono = "0.4.19"
crossbeam = "0.8.0"
itertools = "0.11.0"
memmap = "0.7.0"
socket2 = "0.5.3"
serde = {version = "1.0.123", features = ["derive"]}
enumset = { version = "1.0.11", features = ["serde"] }
dirs = "5.0.1"

### COMMON
p2pthing_common = { path = "../common" }
tracing = { version = "0.1.37" } # FIXME: Have to import it again, since the instrument macro does not seem to work with the one in common

### TUI
p2pthing_tui = { path = "../tui", optional = true }

### GUI
p2pthing_gui = { path = "../gui/src-tauri", optional = true }

### AUDIO

#cpal = { version =  "0.15.2", optional = true }
#magnum-opus  = { version = "0.3.2", optional = true }
#rubato = { version = "0.8.1", optional = true}
#ringbuf = {version = "0.2.3", optional = true }
#nnnoiseless = {version = "0.3.2", optional = true}