[package]
name = "p2pthing_tui"
version = "0.0.0"
authors = ["KillSwitch"]
edition = "2018"

[lib]

[dependencies]
#dxgcap = { version = "0.2.4", optional = true }
p2pthing_common = { path = "../common" }
crossterm = "0.27"
ratatui = { version = "0.23.0", default-features = false, features = ['crossterm'] }
textwrap = "0.16.0"
mio = "0.8.8"
mio-misc = "2.0.0"
num = "0.4.0"
num-derive = "0.4"
num-traits = "0.2"
ctrlc = { version = "3.1.7", features = ["termination"] }
chrono = "0.4.19"