[package]
name = "p2pthing_gui"
version = "0.0.0"
authors = [ "KillSwitch" ]
default-run = "p2pthing_gui"
edition = "2018"
build = "src/build.rs"
description = "GUI client for p2pthing"

[build-dependencies]
tauri-build = { version = "1.0.0-beta.4" }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = [ "derive" ] }
tauri = { version = "1.2.4" }
p2pthing_common = { path = "../../common" }
mio = { version = "0.7.7", features = [ "os-poll" ] }
mio-misc = "1.0.0"

[features]
custom-protocol = [ "tauri/custom-protocol" ]
