[package]
name = "p2pthing_gui"
version = "0.0.0"
authors = [ "KillSwitch" ]
default-run = "p2pthing_gui"
edition = "2018"
build = "src/build.rs"
description = "GUI client for p2pthing"

[build-dependencies]
tauri-build = { version = "1.4.0", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = [ "derive" ] }
tauri = { version = "1.4.1", features = [ "protocol-asset", "fs-read-file", "path-all", "devtools"] }
p2pthing_common = { path = "../../common" }
mio = { version = "0.8.8", features = [ "os-poll" ] }
mio-misc = "2.0.0"

[features]
custom-protocol = [ "tauri/custom-protocol" ]
